[gd_scene load_steps=8 format=3 uid="uid://c88ygrf2jotfm"]

[ext_resource type="Script" path="res://src/banter_card.gd" id="1_ngxp0"]
[ext_resource type="Texture2D" uid="uid://bbunwu0tyrrou" path="res://assets/Cards/ThrowTheMatchCard.png" id="1_yrr2g"]
[ext_resource type="FontFile" uid="uid://c5hgn1rhtkqud" path="res://assets/Small_Pixel_Font.ttf" id="2_x37c4"]
[ext_resource type="Texture2D" uid="uid://c8lrcvvww6kcg" path="res://assets/Tooltip.png" id="4_uelyi"]
[ext_resource type="FontFile" uid="uid://bhl8yycwq0fvo" path="res://assets/Minecraftia-Regular.ttf" id="5_cjgdr"]

[sub_resource type="Animation" id="Animation_281ti"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(55, 83)]
}

[sub_resource type="Animation" id="Animation_pdyv6"]
resource_name = "go_down"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(55, 53), Vector2(55, 83)]
}

[sub_resource type="Animation" id="Animation_36npp"]
resource_name = "go_up"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(55, 83), Vector2(55, 53)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ejap"]
_data = {
"RESET": SubResource("Animation_281ti"),
"go_down": SubResource("Animation_pdyv6"),
"go_up": SubResource("Animation_36npp")
}

[node name="BanterCard" type="Control"]
custom_minimum_size = Vector2(110, 166)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ngxp0")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(55, 83)
texture = ExtResource("1_yrr2g")
hframes = 8

[node name="Name" type="Label" parent="Sprite"]
unique_name_in_owner = true
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -106.0
offset_right = -55.0
offset_bottom = -83.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_x37c4")
theme_override_font_sizes/font_size = 8
text = "dasdasd"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2ejap")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Tooltip" type="NinePatchRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = -171.0
offset_right = 136.0
offset_bottom = -31.0
grow_horizontal = 2
texture = ExtResource("4_uelyi")

[node name="MarginContainer" type="MarginContainer" parent="Tooltip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TooltipText" type="Label" parent="Tooltip/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_constants/line_spacing = -8
theme_override_fonts/font = ExtResource("5_cjgdr")
text = "Deals 5 damage
66% chance to inflict Stamina Loss"
autowrap_mode = 2

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
